--- a/DashBoard/package.json
+++ b/DashBoard/package.json
@@ -9,9 +9,11 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "react": "^17.0.2",
+    "react-date-picker": "^8.2.0",
+    "react-datepicker": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^1.1.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
