--- a/DashBoard/package.json
+++ b/DashBoard/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
@@ -17,8 +18,9 @@
     "react-datepicker": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "^4.0.3",
     "react-transition-group": "^4.4.2",
+    "simple-react-validator": "^1.6.0",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.0.1"
   },
