--- a/DashBoard/package.json
+++ b/DashBoard/package.json
@@ -24,6 +24,7 @@
     "react-transition-group": "^4.4.2",
     "simple-react-validator": "^1.6.0",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.0.18",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
