--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "joi": "^17.4.0",
     "mongoose": "^5.12.7",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.3",
     "uuid": "^8.3.2"
   }
 }
